Run the event tests for the SoA variant, and fix all encountered issues.

--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,7 @@ multi_type_vector_test_custom_soa
 multi_type_vector_test_default_aos
 multi_type_vector_test_default_soa
 multi_type_vector_test_event_aos
+multi_type_vector_test_event_soa
 multi_type_vector_test_perf
 multi_type_vector_test_side_iterator
 point_quad_tree_test
