--- a/Makefile.am
+++ b/Makefile.am
@@ -54,6 +54,7 @@ check_PROGRAMS = \
 	multi_type_matrix_test \
 	multi_type_matrix_test_walk \
 	multi_type_vector_test_event_aos \
+	multi_type_vector_test_event_soa \
 	multi_type_vector_test_custom_aos \
 	multi_type_vector_test_custom_soa \
 	multi_type_vector_test_default_aos \
@@ -90,12 +91,25 @@ multi_type_vector_test_event_aos_SOURCES = \
 	src/multi_type_vector/event/aos/test_main.cpp \
 	src/multi_type_vector/event/aos/test_block_counter.cpp \
 	src/multi_type_vector/event/aos/test_block_init.cpp \
-	src/multi_type_vector/event/aos/tc/block_counter.inl \
-	src/multi_type_vector/event/aos/tc/block_init.inl \
+	src/multi_type_vector/event/tc/block_counter.inl \
+	src/multi_type_vector/event/tc/block_init.inl \
 	src/include/test_global.hpp \
 	src/test_global.cpp
 
 multi_type_vector_test_event_aos_CPPFLAGS = \
+	-I$(top_srcdir)/src/multi_type_vector/event \
+	-I$(top_srcdir)/src/multi_type_vector/event/tc \
+	$(AM_CPPFLAGS)
+
+multi_type_vector_test_event_soa_SOURCES = \
+	src/multi_type_vector/event/soa/test_main.hpp \
+	src/multi_type_vector/event/soa/test_main.cpp \
+	src/multi_type_vector/event/soa/test_block_counter.cpp \
+	src/multi_type_vector/event/soa/test_block_init.cpp \
+	src/include/test_global.hpp \
+	src/test_global.cpp
+
+multi_type_vector_test_event_soa_CPPFLAGS = \
 	-I$(top_srcdir)/src/multi_type_vector/event \
 	-I$(top_srcdir)/src/multi_type_vector/event/tc \
 	$(AM_CPPFLAGS)
@@ -291,6 +305,7 @@ TESTS = \
 	multi_type_matrix_test \
 	multi_type_matrix_test_walk \
 	multi_type_vector_test_event_aos \
+	multi_type_vector_test_event_soa \
 	multi_type_vector_test_custom_aos \
 	multi_type_vector_test_custom_soa \
 	multi_type_vector_test_default_aos \
@@ -313,6 +328,7 @@ TESTS += \
 	multi_type_matrix_test_mem.mem \
 	multi_type_matrix_test_walk_mem.mem \
 	multi_type_vector_test_event_aos_mem.mem \
+	multi_type_vector_test_event_soa_mem.mem \
 	multi_type_vector_test_custom_aos_mem.mem \
 	multi_type_vector_test_custom_soa_mem.mem \
 	multi_type_vector_test_default_aos_mem.mem \
