--- a/include/mdds/multi_type_vector/Makefile.am
+++ b/include/mdds/multi_type_vector/Makefile.am
@@ -1,7 +1,17 @@
+SUBDIRS = aos soa
 
 headersdir = $(includedir)/mdds-@API_VERSION@/mdds/multi_type_vector
 
 headers_HEADERS = \
-	collection.hpp \
-	collection_def.inl
+    collection_def.inl \
+    collection.hpp \
+    custom_func1.hpp \
+    custom_func2.hpp \
+    custom_func3.hpp \
+    iterator.hpp \
+    iterator_node.hpp \
+    macro.hpp \
+    trait.hpp \
+    types.hpp \
+    util.hpp
 
