Move the AoS iterator code into the aos subdirectory.

--- a/include/mdds/multi_type_vector/aos/Makefile.am
+++ b/include/mdds/multi_type_vector/aos/Makefile.am
@@ -2,5 +2,6 @@
 headersdir = $(includedir)/mdds-@API_VERSION@/mdds/multi_type_vector/aos
 
 headers_HEADERS = \
+    iterator.hpp \
     main_def.inl \
     main.hpp
