--- a/src/multi_type_vector/default/aos/CMakeLists.txt
+++ b/src/multi_type_vector/default/aos/CMakeLists.txt
@@ -1,5 +1,7 @@
+set(TEST_NAME multi-type-vector-test-default-aos)
+set(TARGET_NAME ${TEST_NAME})
 
-add_executable(multi-type-vector-test-default-aos EXCLUDE_FROM_ALL
+add_executable(${TARGET_NAME} EXCLUDE_FROM_ALL
     test_basic.cpp
     test_construction.cpp
     test_empty_cells.cpp
@@ -16,13 +18,13 @@ add_executable(multi-type-vector-test-default-aos EXCLUDE_FROM_ALL
     test_set.cpp
     test_swap_range.cpp
     test_transfer.cpp
-    ../../../test_global.cpp
 )
 
-target_include_directories(multi-type-vector-test-default-aos PUBLIC
+target_link_libraries(${TARGET_NAME} PUBLIC test-global)
+target_include_directories(${TARGET_NAME} PUBLIC
     ../tc
     ../../../include
 )
 
-add_test(multi-type-vector-test-default-aos multi-type-vector-test-default-aos)
-add_dependencies(check multi-type-vector-test-default-aos)
+add_test(${TEST_NAME} ${TARGET_NAME})
+add_dependencies(check ${TARGET_NAME})
