--- a/src/multi_type_vector/event/soa/CMakeLists.txt
+++ b/src/multi_type_vector/event/soa/CMakeLists.txt
@@ -1,15 +1,17 @@
+set(TEST_NAME multi-type-vector-test-event-soa)
+set(TARGET_NAME ${TEST_NAME})
 
-add_executable(multi-type-vector-test-event-soa EXCLUDE_FROM_ALL
+add_executable(${TARGET_NAME} EXCLUDE_FROM_ALL
     test_block_counter.cpp
     test_block_init.cpp
     test_main.cpp
-    ../../../test_global.cpp
 )
 
-target_include_directories(multi-type-vector-test-event-soa PUBLIC
+target_link_libraries(${TARGET_NAME} PUBLIC test-global)
+target_include_directories(${TARGET_NAME} PUBLIC
     ../tc
     ../../../include
 )
 
-add_test(multi-type-vector-test-event-soa multi-type-vector-test-event-soa)
-add_dependencies(check multi-type-vector-test-event-soa)
+add_test(${TEST_NAME} ${TARGET_NAME})
+add_dependencies(check ${TARGET_NAME})
