Move rtree test program definitions into its own subdirectory.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,9 @@
 
 add_library(test-global STATIC EXCLUDE_FROM_ALL test_global.cpp)
 
+target_include_directories(test-global PUBLIC
+    include
+)
+
 add_subdirectory(multi_type_vector)
+add_subdirectory(rtree)
