Set up a test group for custom traits, and add test case for ...
loop unrolling factors of 0 and 8. More LU factors are coming soon.

--- a/configure.ac
+++ b/configure.ac
@@ -139,6 +139,10 @@ include/mdds/multi_type_vector/Makefile
 include/mdds/multi_type_vector/aos/Makefile
 include/mdds/multi_type_vector/soa/Makefile
 example/Makefile
+src/Makefile
+src/multi_type_vector/Makefile
+src/multi_type_vector/custom-trait/Makefile
+src/multi_type_vector/custom-trait/aos/Makefile
 test/Makefile
 test/gdb/Makefile
 test/gdb/src/Makefile
