--- a/src/multi_type_vector/CMakeLists.txt
+++ b/src/multi_type_vector/CMakeLists.txt
@@ -2,5 +2,6 @@
 add_subdirectory(default)
 add_subdirectory(collection)
 add_subdirectory(custom)
+add_subdirectory(custom-trait)
 add_subdirectory(event)
 add_subdirectory(perf)
