Add extra program named runtime-env to measure loop unrolling factors.
For now this measures multi_type_vector's loop unrolling factors. But
it may be extended to measure other runtime conditions.

The SoA variant needs to be measured next.

--- a/configure.ac
+++ b/configure.ac
@@ -144,6 +144,8 @@ test/multi_type_vector/Makefile
 test/multi_type_vector/custom-trait/Makefile
 test/multi_type_vector/custom-trait/aos/Makefile
 test/multi_type_vector/custom-trait/soa/Makefile
+tools/Makefile
+tools/runtime-env/Makefile
 flat_segment_tree_test_mem.mem:test/test.mem.in
 misc/mdds-$API_VERSION.pc:misc/mdds.pc.in
 multi_type_matrix_test_mem.mem:test/test.mem.in
