Add a variant of adjust_block_positions that uses SSE2.

--- a/test/multi_type_vector/custom-trait/soa/Makefile.am
+++ b/test/multi_type_vector/custom-trait/soa/Makefile.am
@@ -9,6 +9,7 @@ check_PROGRAMS = test
 test_SOURCES = \
     test_main.cpp \
     test_loop_unrolling.cpp \
+    test_loop_unrolling_simd.cpp \
     $(top_srcdir)/test/test_global.cpp
 
 TESTS = test
