Fix make distcheck.

--- a/test/multi_type_vector/custom-trait/aos/Makefile.am
+++ b/test/multi_type_vector/custom-trait/aos/Makefile.am
@@ -7,6 +7,7 @@ AM_CPPFLAGS = \
 check_PROGRAMS = test
 
 test_SOURCES = \
+    test_main.hpp \
     test_main.cpp \
     test_loop_unrolling.cpp \
     $(top_srcdir)/test/test_global.cpp
