Finish up the section for debug tracing.

--- a/example/Makefile.am
+++ b/example/Makefile.am
@@ -7,6 +7,7 @@ EXTRA_PROGRAMS = \
 	mtv-collection \
 	multi-type-matrix \
 	multi-type-vector \
+	multi-type-vector-debug-trace \
 	multi-type-vector-element-block1 \
 	multi-type-vector-event1 \
 	multi-type-vector-pos-hint \
@@ -26,6 +27,7 @@ flat_segment_tree_itrs_SOURCES = flat_segment_tree_itrs.cpp
 mtv_collection_SOURCES = mtv_collection.cpp
 multi_type_matrix_SOURCES = multi_type_matrix.cpp
 multi_type_vector_SOURCES = multi_type_vector.cpp
+multi_type_vector_debug_trace_SOURCES = multi_type_vector_debug_trace.cpp
 multi_type_vector_element_block1_SOURCES = multi_type_vector_element_block1.cpp
 multi_type_vector_event1_SOURCES = multi_type_vector_event1.cpp
 multi_type_vector_pos_hint_SOURCES = multi_type_vector_pos_hint.cpp
@@ -46,6 +48,7 @@ TESTS = \
 	mtv-collection \
 	multi-type-matrix \
 	multi-type-vector \
+	multi-type-vector-debug-trace \
 	multi-type-vector-element-block1 \
 	multi-type-vector-event1 \
 	multi-type-vector-pos-hint \
