Add the test-trace test to cmake, and fix some test failures.
MSVC puts an extra ' ' after the 'operator' for overloaded operator
methods. Let's remove the extra ' ' before storing it for later
comparison.

Also add a license header I forgot to add.

--- a/test/multi_type_vector/CMakeLists.txt
+++ b/test/multi_type_vector/CMakeLists.txt
@@ -3,5 +3,6 @@ add_subdirectory(default)
 add_subdirectory(collection)
 add_subdirectory(custom)
 add_subdirectory(custom-trait)
+add_subdirectory(debug-util)
 add_subdirectory(event)
 add_subdirectory(perf)
