--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,27 @@
 image: gcc
 
+before_script:
+  - apt update
+  - apt -y install gfortran-9
+  - update-alternatives --install /usr/bin/gfortran gfortran /usr/bin/gfortran-9 999
+  - apt -y install make autoconf automake libtool pkg-config git python3-dev
+  - apt -y install libboost-all-dev
+  - apt -y install valgrind
+  - ldconfig
+
 build:
   stage: build
-  before_script: 
-    - apt update
-    - apt -y install gfortran-9
-    - update-alternatives --install /usr/bin/gfortran gfortran /usr/bin/gfortran-9 999
-    - apt -y install make autoconf automake libtool pkg-config git python3-dev
-    - apt -y install libboost-all-dev
-    - apt -y install valgrind
-    - ldconfig
   variables:
     CXXFLAGS: -Wunused-parameter
   script: 
-    - ./autogen.sh --enable-memory-tests && make -j $(nproc) check
+    - ./autogen.sh --enable-memory-tests
+  artifacts:
+    untracked: true
+    expire_in: 1 hr
+
+check:
+  stage: test
+  dependencies:
+    - build
+  script:
+    - make -j $(nproc) check
