--- a/test/multi_type_vector/event/soa/CMakeLists.txt
+++ b/test/multi_type_vector/event/soa/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(${TARGET_NAME} EXCLUDE_FROM_ALL
     test_block_counter.cpp
     test_block_init.cpp
     test_main.cpp
+    test_swap.cpp
 )
 
 target_link_libraries(${TARGET_NAME} PUBLIC test-global)
