Move the element block definitions for standard types into ...
... a separate header.  We should make these definitions optional.

--- a/include/mdds/multi_type_vector/Makefile.am
+++ b/include/mdds/multi_type_vector/Makefile.am
@@ -10,6 +10,7 @@ headers_HEADERS = \
     custom_func3.hpp \
     iterator_node.hpp \
     macro.hpp \
+    standard_element_blocks.hpp \
     trait.hpp \
     types.hpp \
     util.hpp
