--- a/include/mdds/multi_type_vector/Makefile.am
+++ b/include/mdds/multi_type_vector/Makefile.am
@@ -3,6 +3,7 @@ SUBDIRS = aos soa
 headersdir = $(includedir)/mdds-@API_VERSION@/mdds/multi_type_vector
 
 headers_HEADERS = \
+	block_funcs.hpp \
 	collection_def.inl \
 	collection.hpp \
 	custom_func1.hpp \
