Setup a basic test code for std::vector as store type for element block

--- a/configure.ac
+++ b/configure.ac
@@ -149,6 +149,7 @@ test/multi_type_vector/custom-trait/aos/Makefile
 test/multi_type_vector/custom-trait/soa/Makefile
 test/multi_type_vector/debug-util/Makefile
 test/multi_type_vector/debug-util/soa/Makefile
+test/multi_type_vector/element-blocks/Makefile
 tools/Makefile
 tools/runtime-env/Makefile
 flat_segment_tree_test_mem.mem:test/test.mem.in
