Re-implement specialization for get_block_element_at() wrt std::vector<bool>

--- a/test/multi_type_vector/element-blocks/Makefile.am
+++ b/test/multi_type_vector/element-blocks/Makefile.am
@@ -7,6 +7,8 @@ check_PROGRAMS = test
 
 test_SOURCES = \
 	test_main.cpp \
+	test_store_types.cpp \
+	test_std_vector_bool.cpp \
 	$(top_srcdir)/test/test_global.cpp
 
 TESTS = test
