--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,10 +3,11 @@ image: gcc
 build:
   stage: build
   before_script:
+    - uname -a
     - apt update
     - apt -y install gfortran-10
     - update-alternatives --install /usr/bin/gfortran gfortran /usr/bin/gfortran-10 999
-    - apt -y install make autoconf automake libtool pkg-config git python3-dev
+    - apt -y install make autoconf automake autotools-dev libtool pkg-config git python3-dev
     - apt -y install libboost-all-dev
     - apt -y install valgrind
     - ldconfig
