--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ build:
     - apt update
     - apt -y install gfortran-10
     - update-alternatives --install /usr/bin/gfortran gfortran /usr/bin/gfortran-10 999
-    - apt -y install make dh-autoreconf autoconf automake autotools-dev libtool pkg-config git python3-dev
+    - apt -y install make autoconf automake autotools-dev libtool pkg-config git python3-dev
     - apt -y install libboost-all-dev
     - apt -y install valgrind
     - ldconfig
