--- a/test/multi_type_vector/element-blocks/Makefile.am
+++ b/test/multi_type_vector/element-blocks/Makefile.am
@@ -9,6 +9,8 @@ test_SOURCES = \
 	test_main.cpp \
 	test_store_types.cpp \
 	test_std_vector_bool.cpp \
+	test_no_standard_blocks_aos.cpp \
+	test_no_standard_blocks_soa.cpp \
 	$(top_srcdir)/test/test_global.cpp
 
 TESTS = test
