Fix the build scripts (the cmake part is not yet tested)

--- a/test/multi_type_vector/element-blocks/CMakeLists.txt
+++ b/test/multi_type_vector/element-blocks/CMakeLists.txt
@@ -5,11 +5,25 @@ add_executable(${TARGET_NAME} EXCLUDE_FROM_ALL
     test_main.cpp
     test_std_vector_bool.cpp
     test_store_types.cpp
+)
+
+add_executable(${TARGET_NAME}-aos EXCLUDE_FROM_ALL
+    test_aos.cpp
+    test_aos.cpp
     test_no_standard_blocks_aos.cpp
+)
+
+add_executable(${TARGET_NAME}-aos EXCLUDE_FROM_ALL
+    test_soa.cpp
+    test_soa.cpp
     test_no_standard_blocks_soa.cpp
 )
 
 target_link_libraries(${TARGET_NAME} PUBLIC test-global)
+target_link_libraries(${TARGET_NAME}-aos PUBLIC test-global)
+target_link_libraries(${TARGET_NAME}-soa PUBLIC test-global)
 
 add_test(${TEST_NAME} ${TARGET_NAME})
+add_test(${TEST_NAME}-aos ${TARGET_NAME})
+add_test(${TEST_NAME}-soa ${TARGET_NAME})
 add_dependencies(check ${TARGET_NAME})
