--- a/test/multi_type_vector/element-blocks/Makefile.am
+++ b/test/multi_type_vector/element-blocks/Makefile.am
@@ -7,20 +7,22 @@ check_PROGRAMS = test test-soa test-aos
 
 test_SOURCES = \
 	test_main.cpp \
-	test_store_types.cpp \
 	test_std_vector_bool.cpp \
+	test_store_types.cpp \
 	$(top_srcdir)/test/test_global.cpp
 
 test_soa_SOURCES = \
 	test_soa.hpp \
 	test_soa.cpp \
-	test_no_standard_blocks_soa.cpp
+	test_no_standard_blocks_soa.cpp \
+	$(top_srcdir)/test/test_global.cpp
 
 test_aos_SOURCES = \
 	test_aos.hpp \
 	test_aos.cpp \
-	test_no_standard_blocks_aos.cpp
+	test_no_standard_blocks_aos.cpp \
+	$(top_srcdir)/test/test_global.cpp
 
-EXTRA_DIST = no_standard_blocks.inl
+EXTRA_DIST = no_standard_blocks_defs.inl no_standard_blocks_funcs.inl
 
 TESTS = test test-soa test-aos
