--- a/configure.ac
+++ b/configure.ac
@@ -140,6 +140,7 @@ include/mdds/multi_type_vector/Makefile
 include/mdds/multi_type_vector/aos/Makefile
 include/mdds/multi_type_vector/soa/Makefile
 example/Makefile
+example/multi_type_vector/Makefile
 test/Makefile
 test/gdb/Makefile
 test/gdb/src/Makefile
