More editing on code examples
This is still on-going.

--- a/example/multi_type_vector/.gitignore
+++ b/example/multi_type_vector/.gitignore
@@ -1,7 +1,8 @@
 mtv-collection
-multi-type-vector
-multi-type-vector-debug-trace
-multi-type-vector-element-block1
-multi-type-vector-element-block-custom
-multi-type-vector-event1
-multi-type-vector-pos-hint
+basic
+debug-trace
+element-block1
+event1
+pos-hint
+custom-value-types
+standard-custom-store
