--- a/example/multi_type_vector/Makefile.am
+++ b/example/multi_type_vector/Makefile.am
@@ -4,6 +4,7 @@ AM_CPPFLAGS = -I$(top_srcdir)/include -DNDEBUG
 EXTRA_PROGRAMS = \
 	mtv-collection \
 	basic \
+	custom-value-types \
 	debug-trace \
 	element-block1 \
 	standard-custom-store \
@@ -12,6 +13,7 @@ EXTRA_PROGRAMS = \
 
 mtv_collection_SOURCES = mtv_collection.cpp
 basic_SOURCES = basic.cpp
+custom_value_types_SOURCES = custom_value_types.cpp
 debug_trace_SOURCES = debug_trace.cpp
 element_block1_SOURCES = element_block1.cpp
 standard_custom_store_SOURCES = standard_custom_store.cpp
@@ -21,6 +23,7 @@ pos_hint_SOURCES = pos_hint.cpp
 TESTS = \
 	mtv-collection \
 	basic \
+	custom-value-types \
 	debug-trace \
 	element-block1 \
 	standard-custom-store \
