Talk about specifying custom storage types

--- a/example/multi_type_vector/Makefile.am
+++ b/example/multi_type_vector/Makefile.am
@@ -5,6 +5,7 @@ EXTRA_PROGRAMS = \
 	mtv-collection \
 	basic \
 	custom-value-types \
+	custom-value-types-custom-store \
 	debug-trace \
 	element-block1 \
 	standard-custom-store \
@@ -14,6 +15,7 @@ EXTRA_PROGRAMS = \
 mtv_collection_SOURCES = mtv_collection.cpp
 basic_SOURCES = basic.cpp
 custom_value_types_SOURCES = custom_value_types.cpp
+custom_value_types_custom_store_SOURCES = custom_value_types_custom_store.cpp
 debug_trace_SOURCES = debug_trace.cpp
 element_block1_SOURCES = element_block1.cpp
 standard_custom_store_SOURCES = standard_custom_store.cpp
@@ -24,6 +26,7 @@ TESTS = \
 	mtv-collection \
 	basic \
 	custom-value-types \
+	custom-value-types-custom-store \
 	debug-trace \
 	element-block1 \
 	standard-custom-store \
