--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,7 +11,6 @@ set(_TESTS
     multi-type-matrix-test-walk
     point-quad-tree-test
     segment-tree-test
-    sorted-string-map-test
     trie-map-test
 )
 
@@ -31,3 +30,4 @@ add_dependencies(check
 
 add_subdirectory(multi_type_vector)
 add_subdirectory(rtree)
+add_subdirectory(sorted_string_map)
