Move the test for flat_segment_tree into its own directory

--- a/configure.ac
+++ b/configure.ac
@@ -135,6 +135,7 @@ example/multi_type_vector/Makefile
 test/Makefile
 test/gdb/Makefile
 test/gdb/src/Makefile
+test/flat_segment_tree/Makefile
 test/multi_type_vector/Makefile
 test/multi_type_vector/custom-trait/Makefile
 test/multi_type_vector/custom-trait/aos/Makefile
