--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,7 +6,6 @@ target_include_directories(test-global PUBLIC
 )
 
 set(_TESTS
-    flat-segment-tree-test
     multi-type-matrix-test
     multi-type-matrix-test-walk
     point-quad-tree-test
@@ -28,6 +27,7 @@ add_dependencies(check
     ${_TESTS}
 )
 
+add_subdirectory(flat_segment_tree)
 add_subdirectory(multi_type_vector)
 add_subdirectory(rtree)
 add_subdirectory(sorted_string_map)
