--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,1 +1,8 @@
-SUBDIRS = gdb flat_segment_tree include multi_type_vector multi_type_matrix sorted_string_map
+SUBDIRS = \
+	gdb \
+	flat_segment_tree \
+	include \
+	multi_type_vector \
+	multi_type_matrix \
+	point_quad_tree \
+	sorted_string_map
