Move multi_type_vector's event tests to own directories

--- a/configure.ac
+++ b/configure.ac
@@ -144,6 +144,10 @@ test/multi_type_vector/custom-trait/soa/Makefile
 test/multi_type_vector/debug-util/Makefile
 test/multi_type_vector/debug-util/soa/Makefile
 test/multi_type_vector/element-blocks/Makefile
+test/multi_type_vector/event/Makefile
+test/multi_type_vector/event/aos/Makefile
+test/multi_type_vector/event/soa/Makefile
+test/multi_type_vector/event/tc/Makefile
 test/multi_type_vector/perf/Makefile
 test/sorted_string_map/Makefile
 tools/Makefile
