Move multi_type_vector's default tests to own directories

--- a/configure.ac
+++ b/configure.ac
@@ -136,6 +136,7 @@ test/Makefile
 test/gdb/Makefile
 test/gdb/src/Makefile
 test/flat_segment_tree/Makefile
+test/include/Makefile
 test/multi_type_matrix/Makefile
 test/multi_type_vector/Makefile
 test/multi_type_vector/custom/Makefile
@@ -147,6 +148,10 @@ test/multi_type_vector/custom-trait/aos/Makefile
 test/multi_type_vector/custom-trait/soa/Makefile
 test/multi_type_vector/debug-util/Makefile
 test/multi_type_vector/debug-util/soa/Makefile
+test/multi_type_vector/default/Makefile
+test/multi_type_vector/default/aos/Makefile
+test/multi_type_vector/default/soa/Makefile
+test/multi_type_vector/default/tc/Makefile
 test/multi_type_vector/element-blocks/Makefile
 test/multi_type_vector/event/Makefile
 test/multi_type_vector/event/aos/Makefile
