--- a/test/multi_type_vector/Makefile.am
+++ b/test/multi_type_vector/Makefile.am
@@ -1,1 +1,1 @@
-SUBDIRS = custom custom-trait debug-util element-blocks event perf
+SUBDIRS = custom custom-trait debug-util default element-blocks event perf
