Move segment_tree's test code to its own directory
Also add point_quad_tree's test to cmake, which I forgot to do in the
last commit.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,8 +6,6 @@ target_include_directories(test-global PUBLIC
 )
 
 set(_TESTS
-    point-quad-tree-test
-    segment-tree-test
     trie-map-test
 )
 
@@ -28,5 +26,7 @@ add_dependencies(check
 add_subdirectory(flat_segment_tree)
 add_subdirectory(multi_type_vector)
 add_subdirectory(multi_type_matrix)
+add_subdirectory(point_quad_tree)
 add_subdirectory(rtree)
+add_subdirectory(segment_tree)
 add_subdirectory(sorted_string_map)
