--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,24 +5,6 @@ target_include_directories(test-global PUBLIC
     include
 )
 
-set(_TESTS
-    trie-map-test
-)
-
-foreach(_TEST ${_TESTS})
-    set(_TEST_FILE ${_TEST}.cpp)
-    string(REPLACE "-" "_" _TEST_FILE ${_TEST_FILE})
-    add_executable(${_TEST} EXCLUDE_FROM_ALL
-        ${_TEST_FILE}
-    )
-    target_link_libraries(${_TEST} PRIVATE test-global)
-    add_test(${_TEST} ${_TEST} func)  # these test programs require a 'func' to be passed as an argument.
-endforeach()
-
-add_dependencies(check
-    ${_TESTS}
-)
-
 add_subdirectory(flat_segment_tree)
 add_subdirectory(multi_type_vector)
 add_subdirectory(multi_type_matrix)
@@ -30,3 +12,4 @@ add_subdirectory(point_quad_tree)
 add_subdirectory(rtree)
 add_subdirectory(segment_tree)
 add_subdirectory(sorted_string_map)
+add_subdirectory(trie_map)
