Move multi_type_vector's collection tests to own directories

--- a/configure.ac
+++ b/configure.ac
@@ -139,6 +139,10 @@ test/flat_segment_tree/Makefile
 test/include/Makefile
 test/multi_type_matrix/Makefile
 test/multi_type_vector/Makefile
+test/multi_type_vector/collection/Makefile
+test/multi_type_vector/collection/aos/Makefile
+test/multi_type_vector/collection/soa/Makefile
+test/multi_type_vector/collection/tc/Makefile
 test/multi_type_vector/custom/Makefile
 test/multi_type_vector/custom/aos/Makefile
 test/multi_type_vector/custom/soa/Makefile
