--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -5,6 +5,7 @@ SUBDIRS = \
 	multi_type_vector \
 	multi_type_matrix \
 	point_quad_tree \
+	rtree \
 	segment_tree \
 	sorted_string_map \
 	trie_map
