Move multi_type_vector's custom tests to own directories

--- a/configure.ac
+++ b/configure.ac
@@ -138,6 +138,10 @@ test/gdb/src/Makefile
 test/flat_segment_tree/Makefile
 test/multi_type_matrix/Makefile
 test/multi_type_vector/Makefile
+test/multi_type_vector/custom/Makefile
+test/multi_type_vector/custom/aos/Makefile
+test/multi_type_vector/custom/soa/Makefile
+test/multi_type_vector/custom/tc/Makefile
 test/multi_type_vector/custom-trait/Makefile
 test/multi_type_vector/custom-trait/aos/Makefile
 test/multi_type_vector/custom-trait/soa/Makefile
